--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 services:
-  db:
-    image: postgis/postgis:16-3.4-alpine
-    platform: linux/amd64
-    container_name: personal-website-db
-    environment:
-      POSTGRES_DB: personal_website
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d personal_website"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-
+#   db:
+#     image: postgis/postgis:16-3.4-alpine
+#     platform: linux/amd64
+#     container_name: personal-website-db
+#     environment:
+#       POSTGRES_DB: personal_website
+#       POSTGRES_USER: postgres
+#       POSTGRES_PASSWORD: postgres
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
+#     ports:
+#       - "5432:5432"
+#     healthcheck:
+#       test: ["CMD-SHELL", "pg_isready -U postgres -d personal_website"]
+#       interval: 5s
+#       timeout: 5s
+#       retries: 5
+# 
   backend:
     build: ./backend
     platform: linux/amd64
@@ -61,5 +61,5 @@ services:
       - backend
     command: npm run dev
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
