--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,9 @@ services:
       - DJANGO_DEBUG=True
       - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,backend
       - POSTGRES_DB=personal_website
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST=db
+      - POSTGRES_USER=thesis
+      - POSTGRES_PASSWORD=thesis
+      - POSTGRES_HOST=0.0.0.0
       - POSTGRES_PORT=5432
       - CORS_ALLOWED_ORIGINS=http://localhost:3001,http://127.0.0.1:3001
       - MAPBOX_ACCESS_TOKEN=your_mapbox_token_here
