--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
     environment:
       - DJANGO_API_URL=http://backend:8001
       - MAPBOX_ACCESS_TOKEN=your_mapbox_token_here
+      - HOSTNAME=0.0.0.0
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -56,7 +57,7 @@ services:
       - "3001:3001"
     depends_on:
       - backend
-    command: npm run dev
+    command: npx next dev -p 3001 -H 0.0.0.0
 
 # volumes:
 #   postgres_data:
