--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - DJANGO_API_URL=http://backend:8001
       - MAPBOX_ACCESS_TOKEN=your_mapbox_token_here
       - HOSTNAME=0.0.0.0
+      - PORT=3001
     volumes:
       - ./frontend:/app
       - /app/node_modules
